--- a/style.css
+++ b/style.css
@@ -74,3 +74,11 @@ input{
     color: #fff;
     font-weight: bold;
 }
+
+.error{
+    font-size: 14px;
+    color: #ff0000;
+    padding: 4px;
+    border-radius: 5px;
+    margin-bottom: 10px;
+}
